tests-integration/tests/roundtrip/invalid/semantic/typecheck/int_constant_in_bool_expr/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic/typecheck/int_constant_in_bool_expr/int_constnat_in_bool_expr.essence:2:11:
  |
2 | such that 4 \/ x
  |           ^
Type error:
	Expected: bool
	Got: int